--- a/src/pages/Students/students.css
+++ b/src/pages/Students/students.css
@@ -10,6 +10,8 @@
   width: 80vw;
   padding-left: 0px;
   padding-top: 0px;
+  overflow-y: scroll;
+  height: 100vh;
 }
 .student_right_box_inner {
   padding-left: 20px;
