--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -91,6 +91,7 @@ label #cancel {
   font-weight: 400;
   position: absolute;
   bottom: 30px;
+  line-height: 20px;
 }
 
 @media (max-width: 1130px) {
