added telgram message

--- a/src/components/ApealList/apeal.css
+++ b/src/components/ApealList/apeal.css
@@ -73,7 +73,7 @@ tr {
 border: none;
 }
 .appeal_tr:nth-child(even) {
-  background-color: red;
+  background-color: #EAEDFA;
 }
 .appeal_th {
   width: 30%;
