--- a/src/components/ApealTwoList/apealtwolist.css
+++ b/src/components/ApealTwoList/apealtwolist.css
@@ -6,10 +6,12 @@
   box-shadow: 0px 10px 25px 0px #00000040;
   background-color: #fff;
   padding-bottom: 100px;
+  border: 1px solid #0061F7;
 }
 
 table {
   width: 100%;
+  border: 1px solid #0061F7;
 }
 
 thead {
@@ -22,6 +24,8 @@ thead tr {
 
 thead tr th {
   padding: 10px;
+  border: 1px solid #0061F7;
+  border-collapse: collapse;
 }
 
 tbody tr {
@@ -38,6 +42,7 @@ tr {
 
 .tbody {
   padding: 10px !important;
+  border-collapse: collapse;
 }
 
 .apeal_list_header {
