--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,8 +1,13 @@
+:root {
+  --background-color: #f5f5f5;
+  --text-color: #181c2c;
+}
 .light {
-  background-color: #EAEDFA;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 .other {
-  background: #ffffff;
+  background-color: var(--text-color);
 }
 
 .header {
