--- a/src/pages/Group/group.css
+++ b/src/pages/Group/group.css
@@ -10,7 +10,7 @@
   width: 80vw;
   padding-left: 0px;
   padding-top: 0px;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100vh;
 }
 .group_right_box_inner {
